# ring-kde

./: .gitignore  .packer.yml  AUTHORS  CMakeLists.txt  DEVELOPPER.md  Dockerfile  Doxyfile  INSTALL  Messages.sh  NEWS  README.build.md  README.md  TODO_Qt5  TRANSLATOR  config.sh  gen_po.sh  release.sh  ring-kde.spec
data/: CMakeLists.txt  appicon.qrc  config.ini  cx.ring.ring-kde.appdata.xml  cx.ring.ring-kde.desktop  cx.ring.ring-kde.xml  org.kde.ring-kde.appdata.xml  org.kde.ring-kde.desktop  ring  ring-kde.desktop  ring-kde.notifyrc  ring-kdeui.rc  sflphone-client-kde.desktop  sflphone-client-kde.notifyrc  sflphone-client-kdeui.rc
data/icons/: CMakeLists.txt  sc-apps-ring-kde.svgz
lib/tip/: CMakeLists.txt  tip.cpp  tip.h  tipanimationwrapper.cpp  tipanimationwrapper.h  tipmanager.cpp  tipmanager.h
src/: CMakeLists.txt  accessibility.cpp  accessibility.h  accountwizard.cpp  accountwizard.h  actioncollection.cpp  actioncollection.h  actionsetaccountfirst.cpp  actionsetaccountfirst.h  callview.cpp  callview.h  canvasobjectmanager.cpp  canvasobjectmanager.h  cmd.cpp  cmd.h  codec.cpp  dock.cpp  dock.h  errormessage.cpp  errormessage.h  eventmanager.cpp  eventmanager.h  extendedaction.cpp  extendedaction.h  fancymainwindow.cpp  fancymainwindow.h  implementation.cpp  implementation.h  kspeechinterfacesingleton.cpp  kspeechinterfacesingleton.h  main.cpp  mainwindow.cpp  mainwindow.h  matrixutils.h  matrixutils.hpp  notification.cpp  notification.h  phonewindow.cpp  phonewindow.h  ring.cpp  (+17 more)
src/accountview/: CMakeLists.txt  accountview.qrc  accountviewplugin.cpp  accountviewplugin.h  jamiaccountview.json
src/callview/: CMakeLists.txt  callview.qrc  callviewplugin.cpp  callviewplugin.h  imageprovider.cpp  imageprovider.h  videowidget.cpp  videowidget.h
src/canvasindicators/: CMakeLists.txt  canvasindicator.cpp  canvasindicator.h  canvasindicator.json  canvasindicator.qrc  ringingimageprovider.cpp  ringingimageprovider.h
src/conf/: accountdlg.ui  accountserializationadapter.cpp  accountserializationadapter.h  configurationdialog.cpp  configurationdialog.h  confresources.qrc  dlgaccessibility.cpp  dlgaccessibility.h  dlgaccessibility.ui  dlgaccount.cpp  dlgaccount.h  dlgaccounts.cpp  dlgaccounts.h  dlgaccountsbase.ui  dlgaddressbook.cpp  dlgaddressbook.h  dlgaddressbookbase.ui  dlgaudio.cpp  dlgaudio.h  dlgaudiobase.ui  dlgaudiorecording.ui  dlgdht.cpp  dlgdht.h  dlgdht.ui  dlgdisplay.cpp  dlgdisplay.h  dlgdisplaybase.ui  dlgfallbackperson.ui  dlggeneral.cpp  dlggeneral.h  dlggeneralbase.ui  dlghooks.cpp  dlghooks.h  dlghooksbase.ui  dlgpresence.cpp  dlgpresence.h  dlgpresence.ui  dlgprofiles.cpp  dlgprofiles.h  dlgprofiles.ui  (+3 more)
src/configurator/: audiorecordingconfigurator.cpp  audiorecordingconfigurator.h  bookmark.ui  bookmarkconfigurator.cpp  bookmarkconfigurator.h  fallbackpersonconfigurator.cpp  fallbackpersonconfigurator.h  localhistoryconfigurator.cpp  localhistoryconfigurator.h  peerprofile.ui  peerprofileconfigurator.cpp  peerprofileconfigurator.h  recording.ui
src/contactview/: CMakeLists.txt  contactphoto.cpp  contactphoto.h  contactview.json  contactview.qrc  contactviewplugin.cpp  contactviewplugin.h  mainpage.cpp  mainpage.h
src/delegates/: accountinfodelegate.cpp  accountinfodelegate.h  autocompletiondelegate.cpp  autocompletiondelegate.h  autocompletiondelegate2.cpp  autocompletiondelegate2.h  categorizeddelegate.cpp  categorizeddelegate.h  conferencedelegate.cpp  conferencedelegate.h  contactdelegate.cpp  contactdelegate.h  delegatedropoverlay.cpp  delegatedropoverlay.h  dialpaddelegate.cpp  dialpaddelegate.h  historydelegate.cpp  historydelegate.h  imdelegate.cpp  imdelegate.h  kdepixmapmanipulation.cpp  kdepixmapmanipulation.h  phonenumberdelegate.cpp  phonenumberdelegate.h  ringtonedelegate.cpp  ringtonedelegate.h  toolbardelegate.cpp  toolbardelegate.h
src/desktopview/: CMakeLists.txt  desktopview.qrc  desktopviewplugin.cpp  desktopviewplugin.h  dockmodel.cpp  dockmodel.h  tipmodel.cpp  tipmodel.h
src/dialview/: CMakeLists.txt  dialdock.cpp  dialdock.h  dialview.json  dialview.qrc  dialviewplugin.cpp  dialviewplugin.h
src/genericutils/: CMakeLists.txt  fileloader.h  genericutils.json  plugin.cpp  plugin.h  qmlwidgets.qrc  symboliccolorizer.cpp  treehelper.cpp  treehelper.h
src/icons/: icons.h
src/jamiaudioplayer/: CMakeLists.txt  jamiaudioplayer.json  jamiaudioplayer.qrc  plugin.cpp  plugin.h
src/jamichatview/: CMakeLists.txt  bubble.cpp  bubble.h  jamichatview.json  jamichatview.qrc  plugin.cpp  plugin.h
src/jamihistoryview/: CMakeLists.txt  jamihistoryview.json  jamihistoryview.qrc  plugin.cpp  plugin.h
src/jamikdeintegration/: CMakeLists.txt  kcfg_settings.kcfgc
src/jaminotification/: CMakeLists.txt  focuslistener.cpp  focuslistener.h  jaminotification.qrc  notification.cpp  notification.json  plugin.cpp  plugin.h
src/jamisearch/: CMakeLists.txt  jamisearch.qrc  jamisearchplugin.cpp  jamisearchplugin.h  tipmodel.cpp
src/jamitimeline/: CMakeLists.txt  recentdock.qrc  timelineplugin.cpp  timelineplugin.h  timelineview.json
src/jamitimelinebase/: CMakeLists.txt  jamitimelinebase.json  jamitimelinebase.qrc  multicall.cpp  plugin.cpp  plugin.h  timelinedots.cpp  timelinedots.h
src/jamitroubleshooting/: CMakeLists.txt  jamitroubleshooting.json  jamitroubleshooting.qrc  plugin.cpp  plugin.h
src/jamivideoview/: CMakeLists.txt  imageprovider.cpp  imageprovider.h  jamivideo.json  jamivideo.qrc  plugin.cpp  plugin.h  snapshotadapter.cpp
src/klib/: CMakeLists.txt  akonadibackend.cpp  akonadibackend.h  akonadicontactcollectionmodel.cpp  akonadicontactcollectionmodel.h  bookmarkbackend.cpp  bookmarkbackend.h  bookmarkmodel.cpp  bookmarkmodel.h  configurationskeleton.cpp  configurationskeleton.h  contactproxymodel.cpp  contactproxymodel.h  helperfunctions.cpp  helperfunctions.h  itemmodelserialization.cpp  itemmodelserialization.h  kcfg_settings.kcfgc  kdeprofilepersistor.cpp  kdeprofilepersistor.h  macro.cpp  macro.h  macromodel.cpp  macromodel.h  minimalhistorybackend.cpp  minimalhistorybackend.h  ring-kde.kcfg  sortabledockcommon.h  (+11 more)
(+910 files in other folders)
